# agentcore-monorepo

./: .env.example  .gitignore  .trivyignore  CLAUDE.md  README.md  cli.py  cli_remote.py  pyproject.toml
.claude/: settings.json
.claude/prompts/: architecture.md  system.md
.claude/rules/: code-style.md  terraform.md  testing.md
.github/workflows/: agentcore-release.yml
app/: bedrock.py  cf_tools.py  config.py  entrypoint.py  orchestrator.py  tools.py
docs/: podcast-plan-johannes.md  podcast-prep.md
mcp_servers/: ccapi_entrypoint.py  cost_entrypoint.py
mcp_servers/patches/ccapi/awslabs/ccapi_mcp_server/: schema_manager.py
scripts/: package.sh  package_mcp.sh  setup_policy.sh  setup_targets.sh  test_e2e.sh
terraform/: .oauth2_provider_arn  agentcore.tf  bootstrap.sh  cognito.tf  gateway.tf  gateway_iam.tf  iam.tf  logging.tf  main.tf  mcp_runtimes.tf  memory.tf  outputs.tf  policy.tf  s3.tf  terraform.tfvars.example  variables.tf
terraform/policies/: safety.cedar
