[project]
name = "agentcore-demo"
version = "0.1.0"
description = "Demo: Strands Agents on Amazon Bedrock AgentCore with Terraform"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.0.0",
    "bedrock-agentcore>=1.0.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
